--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,10 @@
 {
-  "compilerOptions": {},
+  "compilerOptions": {
+    "baseUrl": "./",
+    "paths": {
+      "~": ["./src/*"],
+      "src": ["./src/*"]
+    }
+  },
   "extends": "expo/tsconfig.base"
 }
