--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@graphql-codegen/cli": "^2.7.0",
+    "@graphql-codegen/typescript": "^2.6.0",
+    "@graphql-codegen/typescript-operations": "^2.4.3",
+    "@graphql-codegen/typescript-react-apollo": "^3.2.17",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.67.6",
     "babel-plugin-module-resolver": "^4.1.0",
