--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "fmt": "prettier --write src/**/*.{ts,tsx}"
+    "fmt": "prettier --write src/**/*.{ts,tsx}",
+    "generate": "graphql-codegen"
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
