--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-config": "^1.4.6",
+    "react-native-indicators": "^0.17.0",
     "react-native-reanimated": "^2.9.1",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.14.1",
