--- a/app.json
+++ b/app.json
@@ -3,9 +3,8 @@
     "name": "comaty",
     "slug": "comaty",
     "version": "1.0.0",
-    "assetBundlePatterns": [
-      "**/*"
-    ]
+    "assetBundlePatterns": ["**/*"],
+    "userInterfaceStyle": "automatic"
   },
   "name": "comaty"
 }
