--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
+    "@react-native-community/datetimepicker": "6.1.2",
     "@react-native-firebase/app": "^15.1.1",
     "@react-native-firebase/auth": "^15.1.1",
     "@react-navigation/bottom-tabs": "^6.3.1",
@@ -28,6 +29,7 @@
     "react-native": "0.68.2",
     "react-native-config": "^1.4.6",
     "react-native-indicators": "^0.17.0",
+    "react-native-modal-datetime-picker": "^13.1.2",
     "react-native-reanimated": "^2.9.1",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.14.1",
