--- a/ios/Podfile
+++ b/ios/Podfile
@@ -9,7 +9,7 @@ platform :ios, podfile_properties['ios.deploymentTarget'] || '12.0'
 install! 'cocoapods',
   :deterministic_uuids => false
 
-def shared_pods
+target 'comaty' do
   use_frameworks!
   use_expo_modules!
   config = use_native_modules!
@@ -34,66 +34,45 @@ def shared_pods
   #   use_flipper!()
   # end
 
-  post_install do |installer|
-    react_native_post_install(installer)
-    __apply_Xcode_12_5_M1_post_install_workaround(installer)
-  end
-
-  post_integrate do |installer|
-    begin
-      expo_patch_react_imports!(installer)
-    rescue => e
-      Pod::UI.warn e
-    end
-  end
 end
 
-target 'comaty' do
-  shared_pods
-end
+
 
 target 'comaty-dev' do
-  shared_pods
+  use_frameworks!
+  use_expo_modules!
+  config = use_native_modules!
+
+  use_frameworks! :linkage => podfile_properties['ios.useFrameworks'].to_sym if podfile_properties['ios.useFrameworks']
+
+  # Flags change depending on the env values.
+  flags = get_default_flags()
+
+  use_react_native!(
+    :path => config[:reactNativePath],
+    :hermes_enabled => flags[:hermes_enabled] || podfile_properties['expo.jsEngine'] == 'hermes',
+    :fabric_enabled => flags[:fabric_enabled],
+    # An absolute path to your application root.
+    :app_path => "#{Dir.pwd}/.."
+  )
+
+  # Uncomment to opt-in to using Flipper
+  # Note that if you have use_frameworks! enabled, Flipper will not work
+  #
+  # if !ENV['CI']
+  #   use_flipper!()
+  # end
 end
 
-# target 'comaty' do
-#   use_frameworks!
-#   use_expo_modules!
-#   config = use_native_modules!
+post_install do |installer|
+  react_native_post_install(installer)
+  __apply_Xcode_12_5_M1_post_install_workaround(installer)
+end
 
-#   use_frameworks! :linkage => podfile_properties['ios.useFrameworks'].to_sym if podfile_properties['ios.useFrameworks']
-
-#   # Flags change depending on the env values.
-#   flags = get_default_flags()
-
-#   use_react_native!(
-#     :path => config[:reactNativePath],
-#     :hermes_enabled => flags[:hermes_enabled] || podfile_properties['expo.jsEngine'] == 'hermes',
-#     :fabric_enabled => flags[:fabric_enabled],
-#     # An absolute path to your application root.
-#     :app_path => "#{Dir.pwd}/.."
-#   )
-
-#   # Uncomment to opt-in to using Flipper
-#   # Note that if you have use_frameworks! enabled, Flipper will not work
-#   #
-#   # if !ENV['CI']
-#   #   use_flipper!()
-#   # end
-
-#   post_install do |installer|
-#     react_native_post_install(installer)
-#     __apply_Xcode_12_5_M1_post_install_workaround(installer)
-#   end
-
-#   post_integrate do |installer|
-#     begin
-#       expo_patch_react_imports!(installer)
-#     rescue => e
-#       Pod::UI.warn e
-#     end
-#   end
-
-# end
-
-
+post_integrate do |installer|
+  begin
+    expo_patch_react_imports!(installer)
+  rescue => e
+    Pod::UI.warn e
+  end
+end
