--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-reanimated": "^2.9.1",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.14.1",
+    "react-native-svg": "^12.3.0",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
@@ -50,6 +51,7 @@
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^8.19.0",
     "prettier": "^2.7.1",
+    "react-native-svg-transformer": "^1.0.0",
     "typescript": "~4.3.5"
   },
   "resolutions": {
