--- a/ios/Podfile
+++ b/ios/Podfile
@@ -69,6 +69,16 @@ post_install do |installer|
   __apply_Xcode_12_5_M1_post_install_workaround(installer)
 end
 
+pre_install do |installer|
+  installer.pod_targets.each do |pod|
+    if pod.name.eql?('react-native-mmkv')
+      def pod.build_type;
+        Pod::BuildType.static_library
+      end
+    end
+  end
+end
+
 post_integrate do |installer|
   begin
     expo_patch_react_imports!(installer)
