--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native": "0.68.2",
     "react-native-config": "^1.4.6",
     "react-native-indicators": "^0.17.0",
+    "react-native-mmkv": "^2.4.3",
     "react-native-modal-datetime-picker": "^13.1.2",
     "react-native-reanimated": "^2.9.1",
     "react-native-safe-area-context": "^4.3.1",
