--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-config": "^1.4.6",
+    "react-native-fast-image": "^8.5.11",
     "react-native-indicators": "^0.17.0",
     "react-native-mmkv": "^2.4.3",
     "react-native-modal-datetime-picker": "^13.1.2",
