--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
+    "@gorhom/bottom-sheet": "^4",
     "@invertase/react-native-apple-authentication": "^2.2.1",
     "@react-native-community/datetimepicker": "6.1.2",
     "@react-native-firebase/app": "^15.1.1",
@@ -33,6 +34,7 @@
     "react-native": "0.68.2",
     "react-native-config": "^1.4.6",
     "react-native-fast-image": "^8.5.11",
+    "react-native-gesture-handler": "^2.5.0",
     "react-native-indicators": "^0.17.0",
     "react-native-mmkv": "^2.4.3",
     "react-native-modal-datetime-picker": "^13.1.2",
