--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "scripts": {
     "start": "expo start --dev-client",
     "android": "expo run:android",
-    "ios": "expo run:ios",
     "web": "expo start --web",
     "fmt": "prettier --write src/**/*.{ts,tsx}",
-    "generate": "graphql-codegen"
+    "generate": "graphql-codegen",
+    "ios:dev": "npx react-native run-ios --scheme comaty-dev"
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
