--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-animatable": "^1.3.3",
     "react-native-config": "^1.4.6",
     "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "^2.5.0",
