--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@rneui/themed": "^4.0.0-rc.5",
     "expo": "~45.0.0",
     "expo-haptics": "~11.2.0",
+    "expo-linear-gradient": "~11.3.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "graphql": "^16.5.0",
