--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "graphql": "^16.5.0",
     "lottie-ios": "3.2.3",
     "lottie-react-native": "^5.1.3",
+    "moti": "^0.18.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
