--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "graphql": "^16.5.0",
+    "graphql-anywhere": "^4.2.7",
     "lottie-ios": "3.2.3",
     "lottie-react-native": "^5.1.3",
     "moti": "^0.18.0",
