--- a/ios/Podfile
+++ b/ios/Podfile
@@ -71,7 +71,7 @@ end
 
 pre_install do |installer|
   installer.pod_targets.each do |pod|
-    if pod.name.eql?('react-native-mmkv')
+    if pod.name.eql?('react-native-mmkv') || pod.name.eql?('react-native-quick-base64')
       def pod.build_type;
         Pod::BuildType.static_library
       end
