--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,7 @@
 {
-  "extends": "@react-native-community"
+  "extends": "@react-native-community",
+  "rules": {
+    "react/react-in-jsx-scope": "off",
+    "react-native/no-inline-styles": "off"
+  }
 }
