--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-native-firebase/auth": "^15.1.1",
     "@react-native-google-signin/google-signin": "^8.0.0",
     "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/material-top-tabs": "^6.2.3",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "@rneui/base": "^4.0.0-rc.5",
@@ -44,11 +45,13 @@
     "react-native-indicators": "^0.17.0",
     "react-native-mmkv": "^2.4.3",
     "react-native-modal-datetime-picker": "^13.1.2",
+    "react-native-pager-view": "^6.0.0",
     "react-native-quick-base64": "^2.0.5",
     "react-native-reanimated": "^2.9.1",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.14.1",
     "react-native-svg": "^12.3.0",
+    "react-native-tab-view": "^3.1.1",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
