--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-navigation/native-stack": "^6.6.2",
     "@rneui/base": "^4.0.0-rc.5",
     "@rneui/themed": "^4.0.0-rc.5",
+    "date-fns": "^2.29.2",
     "expo": "~45.0.0",
     "expo-haptics": "~11.2.0",
     "expo-linear-gradient": "~11.3.0",
