--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-native-screens": "^3.14.1",
     "react-native-svg": "^12.3.0",
     "react-native-tab-view": "^3.1.1",
+    "react-native-toast-notifications": "^3.3.1",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
