--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-native-firebase/app": "^15.1.1",
     "@react-native-firebase/auth": "^15.1.1",
     "@react-native-google-signin/google-signin": "^8.0.0",
+    "@react-native-menu/menu": "^0.5.2",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/material-top-tabs": "^6.2.3",
     "@react-navigation/native": "^6.0.10",
