--- a/ios/comaty copy-Info.plist
+++ b/ios/comaty copy-Info.plist
@@ -46,6 +46,8 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>アプリで使用するための写真をライブラリから選択するためにリクエストします。</string>
 	<key>UILaunchStoryboardName</key>
 	<string>SplashScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
