--- a/ios/comaty/Info.plist
+++ b/ios/comaty/Info.plist
@@ -46,6 +46,8 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>アプリで使用するための写真をライブラリから選択するためにリクエストします。</string>
 	<key>UILaunchStoryboardName</key>
 	<string>SplashScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
