--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-config": "^1.4.6",
     "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "^2.5.0",
+    "react-native-image-crop-picker": "^0.38.0",
     "react-native-indicators": "^0.17.0",
     "react-native-mmkv": "^2.4.3",
     "react-native-modal-datetime-picker": "^13.1.2",
