--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@apollo/client": "^3.6.9",
     "@gorhom/bottom-sheet": "^4",
     "@invertase/react-native-apple-authentication": "^2.2.1",
+    "@react-native-camera-roll/camera-roll": "^5.0.2",
     "@react-native-community/datetimepicker": "6.1.2",
     "@react-native-firebase/app": "^15.1.1",
     "@react-native-firebase/auth": "^15.1.1",
