--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "date-fns": "^2.29.2",
     "expo": "~45.0.0",
     "expo-haptics": "~11.2.0",
+    "expo-image-picker": "~13.1.1",
     "expo-linear-gradient": "~11.3.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
@@ -46,6 +47,7 @@
     "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-image-crop-picker": "^0.38.0",
+    "react-native-image-picker": "^4.10.0",
     "react-native-indicators": "^0.17.0",
     "react-native-mmkv": "^2.4.3",
     "react-native-modal-datetime-picker": "^13.1.2",
