--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "@react-navigation/native-stack": "^6.6.2",
     "@rneui/base": "^4.0.0-rc.5",
     "@rneui/themed": "^4.0.0-rc.5",
+    "apollo-upload-client": "^17.0.0",
     "date-fns": "^2.29.2",
     "expo": "~45.0.0",
     "expo-haptics": "~11.2.0",
-    "expo-image-picker": "~13.1.1",
     "expo-linear-gradient": "~11.3.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
@@ -46,7 +46,6 @@
     "react-native-config": "^1.4.6",
     "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "^2.5.0",
-    "react-native-image-crop-picker": "^0.38.0",
     "react-native-image-picker": "^4.10.0",
     "react-native-indicators": "^0.17.0",
     "react-native-mmkv": "^2.4.3",
@@ -68,6 +67,7 @@
     "@graphql-codegen/typescript-operations": "^2.4.3",
     "@graphql-codegen/typescript-react-apollo": "^3.2.17",
     "@react-native-community/eslint-config": "^3.0.3",
+    "@types/apollo-upload-client": "^17.0.1",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.67.6",
     "babel-plugin-module-resolver": "^4.1.0",
