--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-native-config": "^1.4.6",
     "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "^2.5.0",
+    "react-native-heic-converter": "^1.3.1",
     "react-native-image-picker": "^4.10.0",
     "react-native-indicators": "^0.17.0",
     "react-native-mmkv": "^2.4.3",
