--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "react-native-svg": "^12.3.0",
     "react-native-tab-view": "^3.1.1",
     "react-native-toast-notifications": "^3.3.1",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "react-native-image-viewing": "git+https://github.com/riku99/react-native-image-viewing.git"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
