--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "react-native-gesture-handler": "^2.5.0",
     "react-native-heic-converter": "^1.3.1",
     "react-native-image-picker": "^4.10.0",
+    "react-native-image-viewing": "git+https://github.com/riku99/react-native-image-viewing.git",
     "react-native-indicators": "^0.17.0",
+    "react-native-maps": "^1.3.1",
     "react-native-mmkv": "^2.4.3",
     "react-native-modal-datetime-picker": "^13.1.2",
     "react-native-pager-view": "^6.0.0",
@@ -59,8 +61,7 @@
     "react-native-svg": "^12.3.0",
     "react-native-tab-view": "^3.1.1",
     "react-native-toast-notifications": "^3.3.1",
-    "react-native-web": "0.17.7",
-    "react-native-image-viewing": "git+https://github.com/riku99/react-native-image-viewing.git"
+    "react-native-web": "0.17.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
