--- a/.env.dev
+++ b/.env.dev
@@ -1,2 +1,3 @@
 ENV=dev
 GOOGLE_WEB_CLIENT_ID=840866011719-0d7c1motvlamiga6ulffbvc3hfivgv9i.apps.googleusercontent.com
+GOOGLE_GEOCOODING_API_KEY=AIzaSyAX2zVobBIqJg9znpT6U7CxT5-1ESzIf-Y
