--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "web": "expo start --web",
     "fmt": "prettier --write src/**/*.{ts,tsx}",
     "generate": "graphql-codegen",
-    "ios:dev": "npx react-native run-ios --scheme comaty-dev",
+    "ios:dev": "npx react-native run-ios --scheme comaty-dev --simulator=iPhone 14",
     "lint": "eslint . --ext .ts,.tsx"
   },
   "dependencies": {
@@ -45,6 +45,7 @@
     "react-native-animatable": "^1.3.3",
     "react-native-config": "^1.4.6",
     "react-native-fast-image": "^8.5.11",
+    "react-native-geocoding": "^0.5.0",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-heic-converter": "^1.3.1",
     "react-native-image-picker": "^4.10.0",
