--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "expo-status-bar": "~1.3.0",
     "graphql": "^16.5.0",
     "graphql-anywhere": "^4.2.7",
+    "lodash.debounce": "^4.0.8",
     "lottie-ios": "3.2.3",
     "lottie-react-native": "^5.1.3",
     "moti": "^0.18.0",
@@ -72,6 +73,7 @@
     "@graphql-codegen/typescript-react-apollo": "^3.2.17",
     "@react-native-community/eslint-config": "^3.0.3",
     "@types/apollo-upload-client": "^17.0.1",
+    "@types/lodash.debounce": "^4.0.7",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.67.6",
     "babel-plugin-module-resolver": "^4.1.0",
