--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "web": "expo start --web",
     "fmt": "prettier --write src/**/*.{ts,tsx}",
     "generate": "graphql-codegen",
-    "ios:dev": "npx react-native run-ios --scheme comaty-dev --simulator=iPhone 14",
+    "ios:dev": "npx react-native run-ios --scheme comaty-dev",
     "lint": "eslint . --ext .ts,.tsx"
   },
   "dependencies": {
