--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-native-firebase/app": "^15.1.1",
     "@react-native-firebase/auth": "^15.1.1",
     "@react-native-google-signin/google-signin": "^8.0.0",
+    "@react-native-masked-view/masked-view": "^0.2.7",
     "@react-native-menu/menu": "^0.5.2",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/material-top-tabs": "^6.2.3",
@@ -30,6 +31,7 @@
     "apollo-upload-client": "^17.0.0",
     "date-fns": "^2.29.2",
     "expo": "~45.0.0",
+    "expo-blur": "~11.1.0",
     "expo-haptics": "~11.2.0",
     "expo-linear-gradient": "~11.3.0",
     "expo-splash-screen": "~0.15.1",
@@ -46,6 +48,7 @@
     "react-native-animatable": "^1.3.3",
     "react-native-config": "^1.4.6",
     "react-native-fast-image": "^8.5.11",
+    "react-native-figma-squircle": "^0.3.3",
     "react-native-geocoding": "^0.5.0",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-heic-converter": "^1.3.1",
