--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-native-google-signin/google-signin": "^8.0.0",
     "@react-native-masked-view/masked-view": "^0.2.7",
     "@react-native-menu/menu": "^0.5.2",
+    "@react-native-picker/picker": "^2.4.6",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/material-top-tabs": "^6.2.3",
     "@react-navigation/native": "^6.0.10",
@@ -55,6 +56,7 @@
     "react-native-image-picker": "^4.10.0",
     "react-native-image-viewing": "git+https://github.com/riku99/react-native-image-viewing.git",
     "react-native-indicators": "^0.17.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "^1.3.1",
     "react-native-mmkv": "^2.4.3",
     "react-native-modal-datetime-picker": "^13.1.2",
