--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "^1.3.1",
     "react-native-mmkv": "^2.4.3",
+    "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^13.1.2",
     "react-native-pager-view": "^6.0.0",
     "react-native-quick-base64": "^2.0.5",
