--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "graphql": "^16.5.0",
     "graphql-anywhere": "^4.2.7",
     "lodash.debounce": "^4.0.8",
-    "lottie-ios": "3.2.3",
-    "lottie-react-native": "^5.1.3",
+    "lottie-ios": "3.4.0",
+    "lottie-react-native": "5.1.4",
     "moti": "^0.18.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -69,6 +69,7 @@
     "react-native-svg": "^12.3.0",
     "react-native-tab-view": "^3.1.1",
     "react-native-toast-notifications": "^3.3.1",
+    "react-native-vision-camera": "^2.14.1",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
