--- a/ios/Podfile
+++ b/ios/Podfile
@@ -67,6 +67,18 @@ end
 post_install do |installer|
   react_native_post_install(installer)
   __apply_Xcode_12_5_M1_post_install_workaround(installer)
+
+    # https://github.com/expo/expo/commit/d970a9ecbb15b554b6fa23e8d43006fd15152028
+    # https://github.com/facebook/react-native/issues/34673
+    installer.target_installation_results.pod_target_installation_results
+      .each do |pod_name, target_installation_result|
+      target_installation_result.resource_bundle_targets.each do |resource_bundle_target|
+        resource_bundle_target.build_configurations.each do |config|
+          config.build_settings['CODE_SIGNING_ALLOWED'] = 'NO'
+        end
+      end
+    end
+
 end
 
 pre_install do |installer|
