--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-animatable": "^1.3.3",
+    "react-native-circular-progress-indicator": "^4.4.0",
     "react-native-config": "^1.4.6",
     "react-native-fast-image": "^8.5.11",
     "react-native-figma-squircle": "^0.3.3",
