--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react-native-svg": "^12.3.0",
     "react-native-tab-view": "^3.1.1",
     "react-native-toast-notifications": "^3.3.1",
+    "react-native-video": "^5.2.1",
     "react-native-vision-camera": "^2.14.1",
     "react-native-web": "0.17.7"
   },
@@ -84,6 +85,7 @@
     "@types/lodash.debounce": "^4.0.7",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.67.6",
+    "@types/react-native-video": "^5.0.14",
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^8.19.0",
     "prettier": "^2.7.1",
