--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-native-geocoding": "^0.5.0",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-heic-converter": "^1.3.1",
+    "react-native-image-colors": "^1.5.1",
     "react-native-image-picker": "^4.10.0",
     "react-native-image-viewing": "git+https://github.com/riku99/react-native-image-viewing.git",
     "react-native-indicators": "^0.17.0",
