--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "expo-linear-gradient": "~11.3.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
+    "expo-video-thumbnails": "~6.3.0",
     "graphql": "^16.5.0",
     "graphql-anywhere": "^4.2.7",
     "lodash.debounce": "^4.0.8",
