--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-native-circular-progress-indicator": "^4.4.0",
     "react-native-config": "^1.4.6",
     "react-native-fast-image": "^8.5.11",
+    "react-native-ffmpeg": "^0.5.2",
     "react-native-figma-squircle": "^0.3.3",
     "react-native-geocoding": "^0.5.0",
     "react-native-gesture-handler": "^2.5.0",
