--- a/ios/Podfile
+++ b/ios/Podfile
@@ -10,6 +10,8 @@ install! 'cocoapods',
   :deterministic_uuids => false
 
 target 'comaty' do
+  pod 'react-native-ffmpeg/min-gpl', :podspec => '../node_modules/react-native-ffmpeg/react-native-ffmpeg.podspec'
+
   use_frameworks!
   use_expo_modules!
   config = use_native_modules!
@@ -38,10 +40,11 @@ end
 
 
 target 'comaty-dev' do
+  pod 'react-native-ffmpeg/min-gpl', :podspec => '../node_modules/react-native-ffmpeg/react-native-ffmpeg.podspec'
+
   use_frameworks!
   use_expo_modules!
   config = use_native_modules!
-
   use_frameworks! :linkage => podfile_properties['ios.useFrameworks'].to_sym if podfile_properties['ios.useFrameworks']
 
   # Flags change depending on the env values.
