--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-native-fast-image": "^8.5.11",
     "react-native-ffmpeg": "^0.5.2",
     "react-native-figma-squircle": "^0.3.3",
+    "react-native-fs": "^2.20.0",
     "react-native-geocoding": "^0.5.0",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-heic-converter": "^1.3.1",
