--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-native-fs": "^2.20.0",
     "react-native-geocoding": "^0.5.0",
     "react-native-gesture-handler": "^2.5.0",
+    "react-native-gifted-chat": "^1.0.4",
     "react-native-heic-converter": "^1.3.1",
     "react-native-image-colors": "^1.5.1",
     "react-native-image-picker": "^4.10.0",
