--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "date-fns": "^2.29.2",
     "expo": "~45.0.0",
     "expo-blur": "~11.1.0",
+    "expo-clipboard": "~3.0.1",
     "expo-haptics": "~11.2.0",
     "expo-linear-gradient": "~11.3.0",
     "expo-splash-screen": "~0.15.1",
