--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^13.1.2",
     "react-native-pager-view": "^6.0.0",
+    "react-native-qrcode-svg": "^6.1.2",
     "react-native-quick-base64": "^2.0.5",
     "react-native-reanimated": "^2.9.1",
     "react-native-safe-area-context": "^4.3.1",
