--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "apollo-upload-client": "^17.0.0",
     "date-fns": "^2.29.2",
     "expo": "~45.0.0",
+    "expo-barcode-scanner": "~11.3.0",
     "expo-blur": "~11.1.0",
     "expo-clipboard": "~3.0.1",
     "expo-haptics": "~11.2.0",
