--- a/ios/comaty copy-Info.plist
+++ b/ios/comaty copy-Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>BGTaskSchedulerPermittedIdentifiers</key>
+	<array>
+		<string>com.transistorsoft.fetch</string>
+	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
@@ -48,10 +52,22 @@
 	</dict>
 	<key>NSCameraUsageDescription</key>
 	<string>撮影のためにカメラにアクセスします</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>位置情報を更新するために許可が必要です</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>位置情報を更新するために許可が必要です</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>撮影のためにマイクにアクセスします</string>
+	<key>NSMotionUsageDescription</key>
+	<string>位置情報の更新を検知するために許可が必要です</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>アプリで使用するための写真をライブラリから選択するためにリクエストします。</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+		<string>fetch</string>
+		<string>location</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>SplashScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
