--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@apollo/client": "3.7.0",
     "@gorhom/bottom-sheet": "^4",
     "@invertase/react-native-apple-authentication": "^2.2.1",
+    "@ptomasroos/react-native-multi-slider": "^2.2.2",
     "@react-native-camera-roll/camera-roll": "^5.0.2",
     "@react-native-community/datetimepicker": "6.1.2",
     "@react-native-firebase/app": "^15.1.1",
