--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-native-figma-squircle": "^0.3.3",
     "react-native-fs": "^2.20.0",
     "react-native-geocoding": "^0.5.0",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-gifted-chat": "^1.0.4",
     "react-native-heic-converter": "^1.3.1",
