--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-native-image-viewing": "git+https://github.com/riku99/react-native-image-viewing.git",
     "react-native-indicators": "^0.17.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-maps": "^1.3.1",
     "react-native-mmkv": "^2.4.3",
     "react-native-modal": "^13.0.1",
@@ -76,6 +77,7 @@
     "react-native-reanimated": "^2.9.1",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.14.1",
+    "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-svg": "^12.3.0",
     "react-native-tab-view": "^3.1.1",
     "react-native-toast-notifications": "^3.3.1",
