--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-native-community/datetimepicker": "6.1.2",
     "@react-native-firebase/app": "^15.1.1",
     "@react-native-firebase/auth": "^15.1.1",
+    "@react-native-firebase/firestore": "15.1.1",
     "@react-native-google-signin/google-signin": "^8.0.0",
     "@react-native-masked-view/masked-view": "^0.2.7",
     "@react-native-menu/menu": "^0.5.2",
